form submit button and link overlap fix

--- a/src/forms/habitForm.css
+++ b/src/forms/habitForm.css
@@ -111,8 +111,8 @@ input:focus {
 }
 
 .form-buttons {
-	width: 120px;
-	height: 45px;
+	/* width: 120px; */
+	/* height: 45px; */
 	background: none;
 	box-sizing: border-box;
 	border-radius: 5px;
@@ -121,6 +121,7 @@ input:focus {
 	font-size: 20px;
 	letter-spacing: 0.06em;
 	cursor: pointer;
+	padding: 0px;
 }
 
 .form-button-submit {
@@ -132,6 +133,6 @@ input:focus {
 
 .form-button-cancel {
 	color: #444;
-	border: 2px solid #888;
+	border: none;
 	font-size: 18px;
 }
